--- a/notebooks/scrub.ipynb
+++ b/notebooks/scrub.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,30 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test\n",
-      "        latitude  longitude   gps_height  population\n",
-      "0      -9.856322  34.938093  1390.000000         109\n",
-      "1      -2.147466  34.698766  1399.000000         280\n",
-      "2      -3.821329  37.460664   686.000000         250\n",
-      "3     -11.155298  38.486161   263.000000          58\n",
-      "4      -1.825359  31.130847  1392.266667           0\n",
-      "...          ...        ...          ...         ...\n",
-      "59395  -3.253847  37.169807  1210.000000         125\n",
-      "59396  -9.070629  35.249991  1212.000000          56\n",
-      "59397  -8.750434  34.017087  1071.333333           0\n",
-      "59398  -6.378573  35.861315   961.387097           0\n",
-      "59399  -6.747464  38.104048   191.000000         150\n",
-      "\n",
-      "[59400 rows x 4 columns]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -314,7 +293,7 @@
        "[59400 rows x 4 columns]"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 436,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,21 +786,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59395</th>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59396</th>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59397</th>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59398</th>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59399</th>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>59400 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "13.0    22587\n",
-       "3.0      2740\n",
-       "1.0      2303\n",
-       "2.0      2129\n",
-       "5.0      1980\n",
-       "Name: age, dtype: int64"
+       "        age\n",
+       "0      12.0\n",
+       "1       3.0\n",
+       "2       4.0\n",
+       "3      27.0\n",
+       "4      13.0\n",
+       "...     ...\n",
+       "59395  14.0\n",
+       "59396  15.0\n",
+       "59397  13.0\n",
+       "59398  13.0\n",
+       "59399   9.0\n",
+       "\n",
+       "[59400 rows x 1 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +889,7 @@
     "cyt_test_df = df[['construction_year', 'date_recorded']].copy()\n",
     "\n",
     "cyt = ConstructionYearTransformer().fit(cyt_test_df)\n",
-    "cyt.transform(cyt_test_df)['age'].value_counts().head()"
+    "cyt.transform(cyt_test_df)"
    ]
   },
   {
@@ -901,37 +960,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22841    2\n",
-       "26203    2\n",
-       "38485    2\n",
-       "16958    1\n",
-       "35847    1\n",
-       "        ..\n",
-       "13587    0\n",
-       "13180    0\n",
-       "4619     0\n",
-       "15292    0\n",
-       "20079    2\n",
-       "Name: status_code, Length: 100, dtype: int8"
-      ]
-     },
-     "execution_count": 411,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hct_test_df['status_code']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 431,
    "metadata": {},
    "outputs": [],
@@ -943,31 +971,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>funder_0</th>\n",
+       "      <th>funder_1</th>\n",
+       "      <th>funder_2</th>\n",
+       "      <th>installer_0</th>\n",
+       "      <th>installer_1</th>\n",
+       "      <th>installer_2</th>\n",
+       "      <th>scheme_name_0</th>\n",
+       "      <th>scheme_name_1</th>\n",
+       "      <th>scheme_name_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24076</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32307</th>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.105263</td>\n",
+       "      <td>0.578947</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6009</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43283</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19556</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>0.055556</td>\n",
+       "      <td>0.388889</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2658</th>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>0.105263</td>\n",
+       "      <td>0.578947</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59313</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48318</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30396</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8513</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "funder_0         0\n",
-       "funder_1         0\n",
-       "funder_2         0\n",
-       "installer_0      0\n",
-       "installer_1      0\n",
-       "installer_2      0\n",
-       "scheme_name_0    0\n",
-       "scheme_name_1    0\n",
-       "scheme_name_2    0\n",
-       "dtype: int64"
+       "       funder_0  funder_1  funder_2  installer_0  installer_1  installer_2  \\\n",
+       "24076  0.000000  1.000000  0.000000     1.000000     0.000000     0.000000   \n",
+       "32307  0.315789  0.105263  0.578947     1.000000     0.000000     0.000000   \n",
+       "6009   1.000000  0.000000  0.000000     1.000000     0.000000     0.000000   \n",
+       "43283  1.000000  0.000000  0.000000     1.000000     0.000000     0.000000   \n",
+       "19556  1.000000  0.000000  0.000000     0.555556     0.055556     0.388889   \n",
+       "...         ...       ...       ...          ...          ...          ...   \n",
+       "2658   0.315789  0.105263  0.578947     0.000000     1.000000     0.000000   \n",
+       "59313  0.000000  0.000000  1.000000     0.000000     0.000000     1.000000   \n",
+       "48318  0.000000  0.000000  1.000000     0.000000     0.000000     1.000000   \n",
+       "30396  0.000000  0.000000  0.000000     0.000000     0.000000     0.000000   \n",
+       "8513   0.000000  0.000000  1.000000     0.000000     0.000000     1.000000   \n",
+       "\n",
+       "       scheme_name_0  scheme_name_1  scheme_name_2  \n",
+       "24076            1.0            0.0            0.0  \n",
+       "32307            1.0            0.0            0.0  \n",
+       "6009             1.0            0.0            0.0  \n",
+       "43283            0.0            0.0            0.0  \n",
+       "19556            0.0            0.0            0.0  \n",
+       "...              ...            ...            ...  \n",
+       "2658             0.0            1.0            0.0  \n",
+       "59313            0.0            0.0            1.0  \n",
+       "48318            0.0            0.0            1.0  \n",
+       "30396            0.0            0.0            1.0  \n",
+       "8513             0.0            0.0            1.0  \n",
+       "\n",
+       "[100 rows x 9 columns]"
       ]
      },
-     "execution_count": 432,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results.isna().sum()"
+    "results"
    ]
   },
   {
@@ -1181,20 +1394,6 @@
     "em = ExtractionMerge().fit(lil_df)\n",
     "em.transform(lil_df).sample(3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
